fin-track-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fin-ns
  labels:
    app: fintrack-app
