fin-track-app/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: fintrack-ingress
  namespace: fin-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx 
  rules:
    - host: fintrack.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fintrack-service
              port:
                number: 80
