fin-track-app/egress-allow-selective.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-selective-egress
  namespace: fin-ns
spec:
  podSelector:
    matchLabels:
      app: fintrack
  policyTypes:
  - Egress
  egress:
  # 1. DNS Resolution
  - to:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

  # 2. HTTPS to Frankfurter API
  - to: []
    ports:
    - protocol: TCP
      port: 443
